/**
 * @ File name: User.java
 * @ Author1: Danilo Silva 113384
 * @ Author2: Tomás Fernandes 112981
 * @ Modified time: 2024-05-06 16:28:56
 */

public enum User {
	OWNER, COMPANY 
}
